==> jackkc7vlo/MCUs/EFM32PG22/hal/i2c_hal.c <==
#include <assert.h>
#include <clock_hal.h>
#include <device_reg.h>
#include <efm32pg22c200f512im40.h>
#include <gpio_hal.h>
#include <hw_config.h>
#include <i2c_hal.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h> /*lint -e129*/
#define I2C_TXBUFFER_SIZE 10u
#define I2C_RXBUFFER_SIZE 10u
#define I2C_FLAG_WRITE 0x0001u
#define I2C_FLAG_READ 0x0002u
#define I2C_FLAG_WRITE_READ 0x0004u
#define I2C_FLAG_WRITE_WRITE 0x0008u
#define I2C_FLAG_10BIT_ADDR 0x0010U
#define I2C_IF_ERRORS (I2C_IF_BUSERR | I2C_IF_ARBLOST)
#define I2C_IEN_ERRORS (I2C_IEN_BUSERR | I2C_IEN_ARBLOST)

p_i2c_hal_t i2c_hal_create_device(const uint32_t i2c_board_id, const uint32_t sda_port,
                                  const uint32_t sda_pin, const uint32_t scl_port,
                                  const uint32_t scl_pin, const p_i2c_callback_t p_callback)
{
    if (i2c_board_id > NUM_I2C_DEVICES)
    {
        return NULL; // Invalid device ID
    }

    p_i2c_hal_t p_free_slot = NULL;
    if (!i2c_initialized)
    {
        i2c_hal_initialize();
    }
    for (uint32_t i = 0; i < NUM_I2C_DEVICES; i++)
    {
        if (i2c_hal_devices[i].in_use == true)
        {
            return &i2c_hal_devices[i]; // Device already in use, return existing device
        }
        else if (p_free_slot == NULL)
        {
            p_free_slot = (p_i2c_hal_t)&i2c_hal_devices[i]; /* Track first free */
            p_free_slot->callback.callback          = p_callback;
            p_free_slot->callback.p_callback_handle = NULL;
            p_free_slot->callback.callback_context =
                (void *)i; // pass the timer index as the callback context

            // p_free_slot->enabled           = false;
            p_free_slot->device_id        = i2c_board_id; /*!< bus id */
            p_free_slot->address_is_7_bit = true;         /*!< 7 bit address */

            p_free_slot->in_use = true;
            uint32_t i2cClock;
            // I2C_Init_TypeDef i2cInit;
            I2CSPM_Init_TypeDef *init = (I2CSPM_Init_TypeDef *)&init_sensor;
            if (i2c_board_id == 0)
            {
                init->port = I2C0;
                i2cClock   = (1u << 5u) | (14u << 0u); /*lint !e835*/
            }
            else if (i2c_board_id == 1)
            {
                init->port = I2C1;
                i2cClock   = (1u << 5u) | (15u << 0u); /*lint !e835*/
            }
            else
            {
                assert((bool)false); /*lint !e506*/
                return NULL;         /*lint !e527*/
            }

            p_free_slot->i2c_port = init->port;        /*!< I2C peripheral */
            p_free_slot->transfer = &i2c_transfers[i]; /*!< I2C transfer state */

            init->sclPort    = scl_port;
            init->sclPin     = scl_pin;
            init->sdaPort    = sda_port;
            init->sdaPin     = sda_pin;
            init->i2cRefFreq = 0u;
            init->i2cMaxFreq = 100000u;
            init->i2cClhr    = i2cClockHLRStandard;

            clock_hal_enable(i2cClock, (bool)true);

            /* Configure GPIO pins for I2C */
            /* SDA and SCL should be configured as wired-and with filter and pull-up */
            if (scl_pin < 8u)
            {
                GPIO->P[scl_port].MODEL &= ~(_GPIO_P_MODEL_MODE0_MASK << (scl_pin * 4u));
                GPIO->P[scl_port].MODEL |=
                    (GPIO_P_MODEL_MODE0_WIREDANDPULLUPFILTER << (scl_pin * 4u));
            }
            else
            {
                GPIO->P[scl_port].MODEH &= ~(_GPIO_P_MODEH_MODE0_MASK << ((scl_pin - 8u) * 4u));
                GPIO->P[scl_port].MODEH |=
                    (GPIO_P_MODEH_MODE0_WIREDANDPULLUPFILTER << ((scl_pin - 8u) * 4u));
            }

            if (sda_pin < 8u)
            {
                GPIO->P[sda_port].MODEL &= ~(_GPIO_P_MODEL_MODE0_MASK << (sda_pin * 4u));
                GPIO->P[sda_port].MODEL |=
                    (GPIO_P_MODEL_MODE0_WIREDANDPULLUPFILTER << (sda_pin * 4u));
            }
            else
            {
                GPIO->P[sda_port].MODEH &= ~(_GPIO_P_MODEH_MODE0_MASK << ((sda_pin - 8u) * 4u));
                GPIO->P[sda_port].MODEH |=
                    (GPIO_P_MODEH_MODE0_WIREDANDPULLUPFILTER << ((sda_pin - 8u) * 4u));
            }

            /* Enable pins and set location */
            if (init->port == I2C0)
            {
                GPIO->I2CROUTE[0].ROUTEEN =
                    GPIO_I2C_ROUTEEN_SDAPEN | GPIO_I2C_ROUTEEN_SCLPEN; /*lint !e835*/
                GPIO->I2CROUTE[0].SCLROUTE =
                    (uint32_t)((init->sclPin << _GPIO_I2C_SCLROUTE_PIN_SHIFT) |
                               (init->sclPort << _GPIO_I2C_SCLROUTE_PORT_SHIFT)); /*lint !e835*/
                GPIO->I2CROUTE[0].SDAROUTE =
                    (uint32_t)((init->sdaPin << _GPIO_I2C_SDAROUTE_PIN_SHIFT) |
                               (init->sdaPort << _GPIO_I2C_SDAROUTE_PORT_SHIFT)); /*lint !e835*/
            }

            if (init->port == I2C1)
            {
                GPIO->I2CROUTE[1].ROUTEEN =
                    GPIO_I2C_ROUTEEN_SDAPEN | GPIO_I2C_ROUTEEN_SCLPEN; /*lint !e835*/
                GPIO->I2CROUTE[1].SCLROUTE =
                    (uint32_t)((init->sclPin << _GPIO_I2C_SCLROUTE_PIN_SHIFT) |
                               (init->sclPort << _GPIO_I2C_SCLROUTE_PORT_SHIFT)); /*lint !e835*/
                GPIO->I2CROUTE[1].SDAROUTE =
                    (uint32_t)((init->sdaPin << _GPIO_I2C_SDAROUTE_PIN_SHIFT) |
                               (init->sdaPort << _GPIO_I2C_SDAROUTE_PORT_SHIFT)); /*lint !e835*/
            }

            init->port->IEN    = 0u;
            init->port->IF_CLR = _I2C_IF_MASK;

            // set i2c as a master
            // set i2c as a master
            device_reg_bit_write(&(init->port->CTRL), _I2C_CTRL_SLAVE_SHIFT, 0u); /*lint !e9117*/

            i2c_hal_bus_freq_set(init->port, init->i2cRefFreq, init->i2cMaxFreq,
                                 (int32_t)init->i2cClhr); /*lint !e9117*/

            // enable i2c
            device_reg_bit_write(&(init->port->EN), _I2C_EN_EN_SHIFT, true); /*lint !e9117*/
        }
    }
    // Additional hardware-specific initialization can be done here

    return p_free_slot;
}

uint32_t i2c_hal_write(const p_i2c_hal_t p_handle, const uint32_t slave_address,
                       const uint32_t cmd_or_register, const uint32_t cmd_or_register_len,
                       const uint8_t *const data, const uint_fast16_t data_len)
{
    // char          error          = 0;
    // uint_fast16_t bytes_written  = 0;
    // uint_fast16_t bytes_to_write = data_len;
    // uint8_t      *pdata          = (uint8_t *)data;

    I2C_TransferSeq_TypeDef    i2cTransferData;
    I2C_TransferReturn_TypeDef result;
    const uint8_t chipdata[2] = {(uint8_t)(cmd_or_register >> 8), (uint8_t)cmd_or_register};

    // Initialize I2C transfer
    i2cTransferData.addr  = (uint16_t)slave_address;
    i2cTransferData.flags = I2C_FLAG_WRITE;
    if (cmd_or_register_len > 0u)
    {
        i2cTransferData.flags       = I2C_FLAG_WRITE_WRITE;
        i2cTransferData.buf[0].data = (uint8_t *)(chipdata + (cmd_or_register_len & 1u));
        i2cTransferData.buf[0].len  = (uint16_t)cmd_or_register_len;

        i2cTransferData.buf[1].data = (uint8_t *)data;
        i2cTransferData.buf[1].len  = (uint16_t)data_len;
    }
    else
    {
        i2cTransferData.buf[0].data = (uint8_t *)data;
        i2cTransferData.buf[0].len  = (uint16_t)data_len;
    }

    result = I2C_TransferInit(p_handle, &i2cTransferData);

    // Send data
    while (result == i2cTransferInProgress)
    {
        result = I2C_Transfer(p_handle);
    }

    if (result != i2cTransferDone)
    {
        return 0u;
    }

    return data_len;
    /* wait until bus is not busy */
}

uint32_t i2c_hal_read(const p_i2c_hal_t p_handle, const uint32_t slave_address,
                      const uint32_t cmd_or_register, const uint32_t cmd_or_register_len,
                      uint8_t *const data, const uint_fast16_t data_len)
{
    // char          error;
    // uint_fast16_t bytes_to_read = data_len;
    // uint8_t      *pdata         = data;

    // Transfer structure
    I2C_TransferSeq_TypeDef    i2cTransferData;
    I2C_TransferReturn_TypeDef result;
    uint8_t chipdata[2] = {(uint8_t)(cmd_or_register >> 8), (uint8_t)cmd_or_register};
    // Initialize I2C transfer
    i2cTransferData.addr  = (uint16_t)slave_address;
    i2cTransferData.flags = I2C_FLAG_WRITE_READ; // must write target address before reading
    if (cmd_or_register_len > 0u)
    {
        i2cTransferData.buf[0].data = (uint8_t *)(chipdata + (cmd_or_register_len & 1u));
        i2cTransferData.buf[0].len  = (uint16_t)cmd_or_register_len;

        i2cTransferData.buf[1].data = (uint8_t *)data;
        i2cTransferData.buf[1].len  = (uint16_t)data_len;
    }
    else
    {
        i2cTransferData.flags       = I2C_FLAG_READ;
        i2cTransferData.buf[0].data = (uint8_t *)data;
        i2cTransferData.buf[0].len  = (uint16_t)data_len;
    }

    result = I2C_TransferInit(p_handle, &i2cTransferData);

    // Send data
    while (result == i2cTransferInProgress)
    {
        result = I2C_Transfer(p_handle);
    }

    if (result != i2cTransferDone)
    {
        return 0u;
    }
    return data_len;

    if (data_len <= 0)
        return -1; /* no read was performed */

    return 0; /* no error */
}

void i2c_hal_enable(const p_i2c_hal_t p_handle, const bool turn_on, const uint32_t settle_time_ms)
{
}
