==> jackkc7vlo/MCUs/ESP32-S3-WROOM-1/hal/i2c_hal.c <==
#include "driver/i2c_master.h"
#include <assert.h>
#include <gpio_hal.h>
#include <hw_config.h>
#include <i2c_hal.h>
#include <stdbool.h>
#include <stdlib.h> /*lint -e129*/
#include <string.h>
#define WRITE_BIT I2C_MASTER_WRITE /*!< I2C master write */
#define READ_BIT I2C_MASTER_READ   /*!< I2C master read */
#define ACK_VAL 0x0                /*!< I2C ack value */
#define NACK_VAL 0x1               /*!< I2C nack value */
#define ACK_CHECK_EN 0x1           /*!< I2C master will check ack from slave*/
#define ACK_CHECK_DIS 0x0          /*!< I2C master will not check ack from slave */

    void *i2c_hal_create_device(const uint32_t i2c_device_id, const p_i2c_callback_t p_callback)
    {
        i2c_device_hal_t *p_i2c_device = NULL;
        switch (i2c_device_id)
        {
#if HW_CONFIG_I2C_NUM_DEVICES >= 1
        case 1u:
            p_i2c_device = &i2c_device1;
            break;

#endif
#if HW_CONFIG_I2C_NUM_DEVICES >= 2
        case 2u:
            p_i2c_device = &i2c_device2;
            break;
#endif
        default:

            return NULL;
        }
        if (!i2c_initialized)
        {
            i2c_hal_initialize(100000U);
        }
        i2c_hal_master_def_t *p_master         = &i2c_master_device;
        p_i2c_device->p_master                 = p_master;
        p_i2c_device->p_callback               = p_callback;
        i2c_device_config_t i2c_mst_dev_config = {
            .dev_addr_length = (i2c_addr_bit_len_t)p_i2c_device->address_length,
            .device_address  = (uint16_t)p_i2c_device->device_address,
            .scl_speed_hz    = 100000U,
            .scl_wait_us     = 0,
            .flags =
                {
                    .disable_ack_check = 0,
                },
        };

        i2c_master_bus_add_device(p_master->i2c_bus_handle, &i2c_mst_dev_config, &i2c_master_device_handle);
        p_i2c_device->i2c_device_handle = &i2c_master_device_handle;

        return p_i2c_device;
    }

    void i2c_hal_write(const void *p_i2c_device, const uint32_t cmd_or_register, const uint32_t cmd_or_register_len,
                       const uint8_t *const data, const uint_fast16_t data_len)
    {

        const uint8_t           chipdata[2] = {(uint8_t)(cmd_or_register >> 8), (uint8_t)cmd_or_register};
        uint32_t                data_size   = data_len + cmd_or_register_len;
        uint8_t                 tx_data[2 + data_len];
        i2c_device_hal_t       *p_i2c_dev      = (i2c_device_hal_t *)p_i2c_device;
        i2c_master_dev_handle_t i2c_dev_handle = *(i2c_master_dev_handle_t *)p_i2c_dev->i2c_device_handle;

        /* Prepare data to send */

        if (cmd_or_register_len > 0)
        {
            tx_data[0] = chipdata[cmd_or_register_len & 1u];
            if (cmd_or_register_len == 2u)
            {
                tx_data[1] = chipdata[0];
                memcpy(&tx_data[2], data, data_len);
            }
            else
            {
                memcpy(&tx_data[1], data, data_len);
            }
        }
        else
        {
            memcpy(&tx_data[0], data, data_len);
        }

        ESP_ERROR_CHECK(i2c_master_transmit(i2c_dev_handle, tx_data, data_size, 5000)); // -1 for infinite timeout

        /*
        i2c_cmd_handle_t cmd = i2c_cmd_link_create();
        i2c_master_start(cmd);
        i2c_master_write_byte(cmd, (p_i2c_device->device_id << 1) | WRITE_BIT, ACK_CHECK_EN);
        if (cmd_or_register_len > 0)
        {
            i2c_master_write(cmd, chipdata + (cmd_or_register_len & 1u), cmd_or_register_len, ACK_CHECK_EN);
        }
        if (data_len > 0)
        {
            i2c_master_write(cmd, data, data_len, ACK_CHECK_EN);
        }
        i2c_master_stop(cmd);
        i2c_master_cmd_begin(I2C_NUM_0, cmd, 1000 / portTICK_PERIOD_MS);
        i2c_cmd_link_delete(cmd);
        */
        // return data_len;
    }

    uint8_t i2c_hal_read(const void *p_i2c_device, const uint32_t cmd_or_register, const uint32_t cmd_or_register_len,
                         uint8_t *const data, const uint_fast16_t data_len)
    {
        const uint8_t           chipdata[2]    = {(uint8_t)(cmd_or_register >> 8), (uint8_t)cmd_or_register};
        int                     ret            = 0;
        i2c_device_hal_t       *p_i2c_dev      = (i2c_device_hal_t *)p_i2c_device;
        i2c_master_dev_handle_t i2c_dev_handle = *(i2c_master_dev_handle_t *)p_i2c_dev->i2c_device_handle;
        uint8_t                 tx[2];
        // const uint8_t           tx[2]          = {(uint8_t)(cmd_or_register >> 8), (uint8_t)cmd_or_register};
        if (cmd_or_register_len > 0)
        {
            tx[0] = chipdata[cmd_or_register_len & 1u];
            if (cmd_or_register_len == 2u)
            {
                tx[1] = chipdata[0];
                // memcpy(&tx_data[2], data, data_len);
            }
            else
            {
                // memcpy(&tx_data[1], data, data_len);
            }
        }
        else
        {
            // memcpy(&tx_data[0], data, data_len);
        }
        // ESP_ERROR_CHECK(i2c_master_receive(i2c_dev_handle, data, data_len, 500));
        ESP_ERROR_CHECK(i2c_master_transmit_receive(i2c_dev_handle, tx, cmd_or_register_len, data, data_len, 500));

        /*
        i2c_cmd_handle_t cmd = i2c_cmd_link_create();
        i2c_master_start(cmd);
        i2c_master_write_byte(cmd, (p_i2c_device->device_id << 1) | WRITE_BIT, ACK_CHECK_EN);
        if (cmd_or_register_len > 0)
        {
            i2c_master_write(cmd, chipdata + (cmd_or_register_len & 1u), cmd_or_register_len, ACK_CHECK_EN);
        }
        i2c_master_stop(cmd);
        ret = i2c_master_cmd_begin(I2C_NUM_0, cmd, 1000 / portTICK_PERIOD_MS);
        i2c_cmd_link_delete(cmd);

        if (data_len >= 1)
        {
            vTaskDelay(30 / portTICK_PERIOD_MS);
            cmd = i2c_cmd_link_create();
            i2c_master_start(cmd);
            i2c_master_write_byte(cmd, (p_i2c_device->device_id << 1) | READ_BIT, ACK_CHECK_EN);
            if (data_len > 1)
            {
                i2c_master_read(cmd, data, data_len - 1, ACK_VAL);
            }
            i2c_master_read_byte(cmd, data + data_len - 1, NACK_VAL);
            i2c_master_stop(cmd);
            ret = i2c_master_cmd_begin(I2C_NUM_0, cmd, 1000 / portTICK_PERIOD_MS);
            i2c_cmd_link_delete(cmd);
        }
        */
        if (ret == ESP_OK)
        {
            return data_len;
        }
        return 0;
    }

    void i2c_hal_enable(const void *p_i2c_device, const bool turn_on, const uint32_t settle_time_us)
    {

        // clock_hal_delay(settle_time_us);
    }
